--- a/roles/www/templates/www/proxy.conf.j2
+++ b/roles/www/templates/www/proxy.conf.j2
@@ -3,6 +3,7 @@ location {{ www_proxy_path }} {
   proxy_pass https://{{ www_proxy_destination }};
   proxy_redirect off;
   
+  proxy_ssl_name $host;
   proxy_ssl_server_name on;  
   proxy_ssl_certificate     /etc/nginx/certs/live/{{ item.domain_name }}/fullchain.pem;
   proxy_ssl_certificate_key /etc/nginx/certs/live/{{ item.domain_name }}/privkey.pem;
