--- a/roles/certbot/templates/ssl.conf.j2
+++ b/roles/certbot/templates/ssl.conf.j2
@@ -1,9 +1,9 @@
-# http redirect
+# redirect http to https
 server {
-  listen	80;
-  listen	[::]:80;
+  listen 80;
+  listen [::]:80;
  
   server_name	{{ item }} *.{{ item }};  
   
-  return	301 https://$server_name$request_uri;
+  return 301 https://$server_name$request_uri;
 }
