expose plex direct access port to allow remote access, mount media library as read only

--- a/roles/plex/templates/plex.conf.j2
+++ b/roles/plex/templates/plex.conf.j2
@@ -1,9 +1,7 @@
 server {
 
-  {% for port in plex_ports %}
-  listen {{ port }} ssl http2;
-  listen [::]:{{ port }} ssl http2;
-  {% endfor %}
+  listen 443 ssl http2;
+  listen [::]:443 ssl http2;
 
   server_name {{ item.server_names | join(' ') }};
 
