--- a/roles/certbot/templates/ssl.conf.j2
+++ b/roles/certbot/templates/ssl.conf.j2
@@ -5,5 +5,5 @@ server {
  
   server_name	{{ item }} *.{{ item }};  
   
-  return 301 https://$server_name$request_uri;
+  return 301 https://$host$request_uri;
 }
