--- a/roles/certbot/templates/cloudflare.ini.j2
+++ b/roles/certbot/templates/cloudflare.ini.j2
@@ -1,2 +1,2 @@
 # Cloudflare API token used by Certbot
-dns_cloudflare_api_token = {{ certbot_cloudflare_api_key }}
+dns_cloudflare_api_token = {{ api_key }}
