--- a/roles/qbittorrent/templates/qbittorrent.conf.j2
+++ b/roles/qbittorrent/templates/qbittorrent.conf.j2
@@ -3,10 +3,10 @@ server {
   listen 443 ssl http2;
   listen [::]:443 ssl http2;
 
-  server_name {{ item.server_names | join(' ') }};
+  server_name {{ server_prefix }}.{{ item }};
 
-  ssl_certificate       /etc/nginx/certs/live/{{ item.domain_name }}/fullchain.pem;
-  ssl_certificate_key   /etc/nginx/certs/live/{{ item.domain_name }}/privkey.pem;
+  ssl_certificate       /etc/nginx/certs/live/{{ item }}/fullchain.pem;
+  ssl_certificate_key   /etc/nginx/certs/live/{{ item }}/privkey.pem;
 
   ssl_stapling on;
   ssl_stapling_verify on;
@@ -15,7 +15,7 @@ server {
   client_max_body_size 64M;
 
   location / {
-    proxy_pass http://{{ qbittorrent_container_name }}:8080;
+    proxy_pass http://{{ container }}:8080;
     proxy_redirect off;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
