--- a/roles/www/templates/www/proxy.conf.j2
+++ b/roles/www/templates/www/proxy.conf.j2
@@ -5,8 +5,8 @@ location {{ www_proxy_path }} {
   
   proxy_ssl_name $host;
   proxy_ssl_server_name on;  
-  proxy_ssl_certificate     /etc/nginx/certs/live/{{ item.domain_name }}/fullchain.pem;
-  proxy_ssl_certificate_key /etc/nginx/certs/live/{{ item.domain_name }}/privkey.pem;
+  proxy_ssl_certificate     /etc/nginx/certs/{{ item.domain_name }}/fullchain.pem;
+  proxy_ssl_certificate_key /etc/nginx/certs/{{ item.domain_name }}/privkey.pem;
   proxy_ssl_session_reuse on;
 
   proxy_set_header Host $host;
