--- a/roles/qbittorrent/templates/qbittorrent.conf.j2
+++ b/roles/qbittorrent/templates/qbittorrent.conf.j2
@@ -3,7 +3,7 @@ server {
   listen 443 ssl http2;
   listen [::]:443 ssl http2;
 
-  server_name {{ server_prefix }}.{{ item }};
+  server_name {{ qbittorrent_domain_prefix }}.{{ item }};
 
   ssl_certificate       /etc/nginx/certs/{{ item }}_ecc/fullchain.cer;
   ssl_certificate_key   /etc/nginx/certs/{{ item }}_ecc/{{ item }}.key;
