--- a/roles/plex/templates/plex.conf.j2
+++ b/roles/plex/templates/plex.conf.j2
@@ -3,10 +3,10 @@ server {
   listen 443 ssl http2;
   listen [::]:443 ssl http2;
 
-  server_name {{ server_prefix }}.{{ item }};
+  server_name {{ plex_domain_prefix }}.{{ item }};
 
-  ssl_certificate       /etc/nginx/certs/{{ item }}/fullchain.pem;
-  ssl_certificate_key   /etc/nginx/certs/{{ item }}/privkey.pem;
+  ssl_certificate       /etc/nginx/certs/{{ item }}_ecc/fullchain.cer;
+  ssl_certificate_key   /etc/nginx/certs/{{ item }}_ecc/{{ item }}.key;
 
   ssl_stapling on;
   ssl_stapling_verify on;
@@ -15,7 +15,7 @@ server {
   client_max_body_size 64M;
 
   location / {
-    proxy_pass http://{{ container }}:32400;
+    proxy_pass http://{{ plex_container }}:32400;
     proxy_redirect off;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
