--- a/roles/qbittorrent/templates/qbittorrent.conf.j2
+++ b/roles/qbittorrent/templates/qbittorrent.conf.j2
@@ -15,7 +15,7 @@ server {
   client_max_body_size 64M;
 
   location / {
-    proxy_pass http://{{ qbittorrent_container }}:8080;
+    proxy_pass http://{{ qbittorrent_container }}:8080/;
     proxy_redirect off;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
