--- a/roles/xray/templates/server_config.json.j2
+++ b/roles/xray/templates/server_config.json.j2
@@ -16,7 +16,7 @@
                 "network": "ws",
                 "security": "none",
                 "wsSettings": {
-                    "path": "{{ xray_path }}"
+                    "path": "{{ xray_url_path }}"
                 }
             }
         }
