--- a/roles/nginx/templates/www.conf.j2
+++ b/roles/nginx/templates/www.conf.j2
@@ -1,7 +1,6 @@
 server {
-  listen 443 ssl;
-  listen [::]:443 ssl;
-  http2 on;
+  listen 443 ssl http2;
+  listen [::]:443 ssl http2;
 
   server_name www.{{ item }};
 
